Change reflective copying to not be deprecated in Java 9